tuning gemini ai in the project

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ JWT_KEY = jwtkey
 REDIS_HOST = redis-15731.crce179.ap-south-1-1.ec2.redns.redis-cloud.com
 REDIS_PORT = 15731
 REDIS_PASSWORD = h6gffuleuB1PS6O5y9lCWQI33E0cpGE4
+GOOGLE_AI_KEY = AIzaSyBQ3K7eFbLSte3ONqKRIgfgQ732Yr0Znuk
